src/core/translator/snapshots/openproxy__core__translator__tests__gemini_to_openai_function_call_and_response.snap
---
source: src/core/translator/tests.rs
expression: result
---
{
  "messages": [
    {
      "content": "What's 2+2?",
      "role": "user"
    },
    {
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{\"expression\":\"2+2\"}",
            "name": "calculate"
          },
          "type": "function"
        }
      ]
    },
    {
      "content": "4",
      "role": "tool",
      "tool_call_id": "calculate"
    }
  ],
  "model": "test-model",
  "stream": false
}
