src/core/translator/snapshots/openproxy__core__translator__tests__gemini_to_openai_generation_config.snap
---
source: src/core/translator/tests.rs
expression: result
---
{
  "max_tokens": 2048,
  "messages": [
    {
      "content": "Write a story",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": false,
  "temperature": 0.8,
  "top_p": 0.9
}
