src/core/translator/snapshots/openproxy__core__translator__tests__gemini_to_openai_response_first_chunk.snap
---
source: src/core/translator/tests.rs
expression: clean_first
---
{
  "choices": [
    {
      "delta": {
        "role": "assistant"
      },
      "finish_reason": null,
      "index": 0
    }
  ],
  "id": "chatcmpl-test-gemini-response-1",
  "model": "gemini",
  "object": "chat.completion.chunk"
}
