src/core/translator/snapshots/openproxy__core__translator__tests__gemini_to_openai_simple_text.snap
---
source: src/core/translator/tests.rs
expression: result
---
{
  "messages": [
    {
      "content": "Hello Gemini",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": false
}
