src/core/translator/snapshots/openproxy__core__translator__tests__gemini_to_openai_thought_parts.snap
---
source: src/core/translator/tests.rs
expression: result
---
{
  "messages": [
    {
      "content": "Think step by step: 23 * 45",
      "role": "user"
    },
    {
      "content": "The answer is 1035.",
      "reasoning_content": "Let me compute 23 * 45 = 1035",
      "role": "assistant"
    }
  ],
  "model": "test-model",
  "stream": false
}
