src/core/translator/snapshots/openproxy__core__translator__tests__gemini_to_openai_with_system_instruction.snap
---
source: src/core/translator/tests.rs
expression: result
---
{
  "messages": [
    {
      "content": "You are a Gemini assistant.",
      "role": "system"
    },
    {
      "content": "Explain quantum computing",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": false
}
