src/core/translator/snapshots/openproxy__core__translator__tests__openai_to_gemini_simple_text.snap
---
source: src/core/translator/tests.rs
expression: result
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "Hello from OpenAI"
        }
      ],
      "role": "user"
    }
  ],
  "generationConfig": {},
  "safetySettings": [
    {
      "category": "HARM_CATEGORY_HARASSMENT",
      "threshold": "OFF"
    },
    {
      "category": "HARM_CATEGORY_HATE_SPEECH",
      "threshold": "OFF"
    },
    {
      "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT",
      "threshold": "OFF"
    },
    {
      "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
      "threshold": "OFF"
    },
    {
      "category": "HARM_CATEGORY_CIVIC_INTEGRITY",
      "threshold": "OFF"
    }
  ]
}
